# poc-auto-python

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml
aplicacao/dashboard/: app.py  dados_disponibilizados.csv
aplicacao/dashboard/rsconnect-python/: dashboard.json
aplicacao/relatorio/: relatorio.html  relatorio.qmd  relatorio.quarto_ipynb
dados/: dados.db
python/: 01_extracao.py  02_transformacao.py  03_disponibilizacao.py
